--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: -moz-linear-gradient(var(--soft-violet), var(--soft-blue));
+    background-image: linear-gradient(var(--soft-violet), var(--soft-blue));
     display: flex;
     justify-content: center;
     align-items: center;
